<resources>
    <string name="app_name">Get_to_know_your_city_again</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_list_items">My items</string>
    <string name="menu_list_favourites">My favourites items</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="dialog_new_item">New object items</string>
    <string name="add_item">Add Item</string>
    <string name="cancel">Cancel</string>
    <string name="edit_item">Edit Item</string>
    <string name="name_item">Name</string>
    <string name="address_item">Address</string>
    <string name="description_item">Description</string>
    <string name="type_item">Type</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">Or</string>
    <string name="create_text">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="get_started">Get started!</string>
    <string name="item_textView">Add new items</string>
    <string name="comment_tittle">Comments</string>
    <string name="comment_input_text">write a comment here...</string>
    <string name="added_by">Added by</string>
    <string name="list_favourites_text">You don\'t have any favourites items</string>
    <string name="search_locality">Search locality</string>
    <string name="city_item">City</string>
    <string name="street_item">Street </string>
    <string name="address_text">Address:</string>
    <string name="description_item_text">Description:</string>
    <string name="type_item_text">Type:</string>
    <string name="addedBy_item_text">Added by </string>

</resources>
