<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.Get_to_know_your_city_again.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_user_list_items"
        android:name="com.Get_to_know_your_city_again.ui.items.UserListItemsFragment"
        android:label="@string/menu_list_items"
        tools:layout="@layout/fragment_user_list_item" />

    <fragment
        android:id="@+id/nav_list_favourites"
        android:name="com.Get_to_know_your_city_again.ui.favouritesUserListItems.FavouritesUserListItemsFragment"
        android:label="@string/menu_list_favourites"
        tools:layout="@layout/fragment_list_favourites" />


<!--    <fragment-->
<!--        android:id="@+id/nav_logout"-->
<!--        android:name="com.Get_to_know_your_city_again.ui.tools.ToolsFragment"-->
<!--        android:label="@string/menu_logout"-->
<!--        tools:layout="@layout/fragment_logout" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_share"-->
<!--        android:name="com.Get_to_know_your_city_again.ui.share.ShareFragment"-->
<!--        android:label="@string/menu_share"-->
<!--        tools:layout="@layout/fragment_share" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_send"-->
<!--        android:name="com.Get_to_know_your_city_again.ui.send.SendFragment"-->
<!--        android:label="@string/menu_send"-->
<!--        tools:layout="@layout/fragment_send" />-->
</navigation>